--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -35,7 +35,7 @@ $black-color: #000000 !default;
 
 // Theme colors
 
-$code-bg-color-light: rgba($pink-color, 0.05);
+$code-bg-color-light: rgba($blue-color-duke, 0.05);
 $code-bg-color-dark: #2c3237 !default;
 
 // Font awesome location
