--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -7,10 +7,10 @@
 :root {
   --global-bg-color: #{$white-color};
   --global-code-bg-color: #{$code-bg-color-light};
-  --global-text-color: #{$grey-color};
-  --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$grey-color};
-  --global-hover-color: #{$grey-color};
+  --global-text-color: #{$black-color};
+  --global-text-color-light: #{$black-color};
+  --global-theme-color: #{$blue-color-duke:};
+  --global-hover-color: #{$blue-color-duke:};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
