rearranged lab page

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -9,6 +9,7 @@
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$black-color};
+  --global-text-bold-color: #{$blue-color-duke};
   --global-theme-color: #{$blue-color-duke};
   --global-hover-color: #{$blue-color-duke};
   --global-hover-text-color: #{$white-color};
