--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,9 +14,21 @@ h6,
 em,
 div,
 li,
-span,
-strong {
+span {
   color: var(--global-text-color);
+}
+
+strong {
+  color: var(--global-text-bold-color);
+}
+
+h1 strong,
+h2 strong,
+h3 strong,
+h4 strong,
+h5 strong,
+h6 strong {
+  color: inherit; /* Keep the inherited color for bold text in headers */
 }
 
 hr {
@@ -216,7 +228,7 @@ ul.task-list input[type="checkbox"] {
 
 @media (min-width: 576px) {
   .profile {
-    width: 25%;
+    width: 24%;
 
     .address {
       p {
