updated badge color

--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -18,7 +18,7 @@
             {% if site.data.venues[entry.abbr].url %}
               <a href="{{ site.data.venues[entry.abbr].url }}">{{ entry.abbr }}</a>
             {% else %}
-              <div>{{- entry.abbr -}}</div>
+              <div style="color:white;">{{- entry.abbr -}}</div>
             {% endif %}
           </abbr>
         {% else %}
@@ -181,6 +181,9 @@
     <div class="periodical">
       {{ entry.note | strip }}
     </div>
+
+    <!-- Highlight -->
+    <div class="highlight">{{ entry.highlight }}</div>
 
     <!-- Links/Buttons -->
     <div class="links">
